address review comments
mostly adding i18n to error states, and cleaning up error handling of
HTTP requests.

Signed-off-by: Cody Cutrer <cody@cutrer.us>